--- a/django_fulcrum/scripts/geoshape-django_fulcrum-vagrant/Vagrantfile
+++ b/django_fulcrum/scripts/geoshape-django_fulcrum-vagrant/Vagrantfile
@@ -6,7 +6,7 @@ VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
 	config.vm.box = "bento/centos-6.7"
-	#config.vm.provision :shell, path: "scripts/bootstrap.sh"
+	config.vm.provision :shell, path: "scripts/bootstrap.sh"
 
 	## create a private network visible only to the host machine
 	config.vm.network :private_network, ip: "192.168.99.110"
